force-app/main/default/objects/Taxes__c/fields/AntecipationFrequency__c.field-meta.xml
<CustomField>
    <fullName>AntecipationFrequency__c</fullName>
    <label>Antecipation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AntecipationFrequency</valueSetName>
    </valueSet>
</CustomField>