force-app/main/default/objects/Taxes__c/fields/Can_Edit_All_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_All_Taxes__c</fullName>
    <formula>IF(
$Permission.Can_Edit_Taxes_CEO_Director, 
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Edit All Taxes</label>
    <type>Checkbox</type>
</CustomField>