force-app/main/default/objects/Taxes__c/fields/FlexBoard__c.field-meta.xml
<CustomField>
    <fullName>FlexBoard__c</fullName>
    <label>FlexBoard</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>