force-app/main/default/objects/Taxes__c/fields/FlexHead__c.field-meta.xml
<CustomField>
    <fullName>FlexHead__c</fullName>
    <label>FlexHead</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>