force-app/main/default/objects/Taxes__c/fields/Flexibilization__c.field-meta.xml
<CustomField>
    <fullName>Flexibilization__c</fullName>
    <label>Nível de flexibilização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Com Autonomia</fullName>
            </value>
            <value>
                <fullName>Com Flexibilização</fullName>
            </value>
            <value>
                <fullName>Sem Autonomia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>