force-app/main/default/objects/Taxes__c/fields/InstallmentNumber__c.field-meta.xml
<CustomField>
    <fullName>InstallmentNumber__c</fullName>
    <label>Installment Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InstallmentNumber</valueSetName>
    </valueSet>
</CustomField>