force-app/main/default/objects/Taxes__c/fields/IntegrationType__c.field-meta.xml
<CustomField>
    <fullName>IntegrationType__c</fullName>
    <label>Tipo Integração</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IntegrationType</valueSetName>
    </valueSet>
</CustomField>