force-app/main/default/objects/Taxes__c/fields/IsGatewayAndIntermediation__c.field-meta.xml
<CustomField>
    <fullName>IsGatewayAndIntermediation__c</fullName>
    <formula>AND(
  INCLUDES(BusinessModel__c, &quot;Intermediation&quot;),
  INCLUDES(BusinessModel__c, &quot;Gateway&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsGatewayAndIntermediation</label>
    <type>Checkbox</type>
</CustomField>