force-app/main/default/objects/Taxes__c/fields/PercentValue__c.field-meta.xml
<CustomField>
    <fullName>PercentValue__c</fullName>
    <label>Percent Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>