force-app/main/default/objects/Taxes__c/fields/ProcessingType__c.field-meta.xml
<CustomField>
    <fullName>ProcessingType__c</fullName>
    <label>Processing Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProcessingType</valueSetName>
    </valueSet>
</CustomField>