force-app/main/default/objects/Taxes__c/fields/ProductClass__c.field-meta.xml
<CustomField>
    <fullName>ProductClass__c</fullName>
    <label>Product Class</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductClass</valueSetName>
    </valueSet>
</CustomField>