force-app/main/default/objects/Taxes__c/fields/RangeFaixaFinal__c.field-meta.xml
<CustomField>
    <fullName>RangeFaixaFinal__c</fullName>
    <label>Range Faixa Final</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>