force-app/main/default/objects/Taxes__c/fields/RangeFaixaInicial__c.field-meta.xml
<CustomField>
    <fullName>RangeFaixaInicial__c</fullName>
    <label>Range Faixa Inicial</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>