force-app/main/default/objects/Taxes__c/fields/ReceitaMensalFinal__c.field-meta.xml
<CustomField>
    <fullName>ReceitaMensalFinal__c</fullName>
    <label>Receita Mensal Final</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>