force-app/main/default/objects/Taxes__c/fields/ReceitaMensalInicial__c.field-meta.xml
<CustomField>
    <fullName>ReceitaMensalInicial__c</fullName>
    <label>Receita Mensal Inicial</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>