force-app/main/default/objects/Taxes__c/fields/StatusTaxa__c.field-meta.xml
<CustomField>
    <fullName>StatusTaxa__c</fullName>
    <label>Status Taxa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>