force-app/main/default/objects/Taxes__c/fields/TaxaBaseAntecipacao__c.field-meta.xml
<CustomField>
    <fullName>TaxaBaseAntecipacao__c</fullName>
    <label>Taxa Base Antecipação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxaBaseAntecipacaoNational</valueSetName>
    </valueSet>
</CustomField>