force-app/main/default/objects/Taxes__c/fields/TaxRegion__c.field-meta.xml
<CustomField>
    <fullName>TaxRegion__c</fullName>
    <label>Tax Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Crossborder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>