force-app/main/default/objects/Taxes__c/fields/TicketFinal__c.field-meta.xml
<CustomField>
    <fullName>TicketFinal__c</fullName>
    <label>Ticket Final</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>