force-app/main/default/objects/Taxes__c/fields/TicketInicial__c.field-meta.xml
<CustomField>
    <fullName>TicketInicial__c</fullName>
    <label>Ticket Inicial</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>