force-app/main/default/objects/Taxes__c/recordTypes/TaxaAntecipacao.recordType-meta.xml
<RecordType>
    <fullName>TaxaAntecipacao</fullName>
    <active>true</active>
    <label>Taxa Antecipação</label>
</RecordType>