force-app/main/default/objects/Taxes__c/recordTypes/TaxaBaseAntecipacao.recordType-meta.xml
<RecordType>
    <fullName>TaxaBaseAntecipacao</fullName>
    <active>true</active>
    <label>Taxa Base Antecipação</label>
</RecordType>