force-app/main/default/objects/Taxes__c/recordTypes/TaxaGateway.recordType-meta.xml
<RecordType>
    <fullName>TaxaGateway</fullName>
    <active>true</active>
    <label>Taxa Gateway</label>
</RecordType>