force-app/main/default/objects/Taxes__c/recordTypes/TaxaProcessamento.recordType-meta.xml
<RecordType>
    <fullName>TaxaProcessamento</fullName>
    <active>true</active>
    <label>Taxa Processamento</label>
</RecordType>