force-app/main/default/objects/Taxes__c/recordTypes/TaxaSolucaoPagBrasil.recordType-meta.xml
<RecordType>
    <fullName>TaxaSolucaoPagBrasil</fullName>
    <active>true</active>
    <label>Taxa Solução PagBrasil</label>
</RecordType>