force-app/main/default/objects/Taxes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RecordTypeName__c</columns>
    <columns>Product__c</columns>
    <columns>ProcessingType__c</columns>
    <columns>PercentValue__c</columns>
    <columns>ReceitaMensalInicial__c</columns>
    <columns>ReceitaMensalFinal__c</columns>
    <columns>RangeFaixaInicial__c</columns>
    <columns>RangeFaixaFinal__c</columns>
    <columns>TicketInicial__c</columns>
    <columns>TicketFinal__c</columns>
    <columns>IntegrationType__c</columns>
    <columns>TaxaBaseAntecipacao__c</columns>
    <columns>IsPercent__c</columns>
    <columns>ProductClass__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>