force-app/main/default/objects/Taxes__c/listViews/All_Cross.listView-meta.xml
<ListView>
    <fullName>All_Cross</fullName>
    <columns>NAME</columns>
    <columns>RecordTypeName__c</columns>
    <columns>Product__c</columns>
    <columns>ProcessingType__c</columns>
    <columns>PercentValue__c</columns>
    <columns>ReceitaMensalInicial__c</columns>
    <columns>ReceitaMensalFinal__c</columns>
    <columns>IntegrationType__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>TaxaBaseAntecipacao__c</columns>
    <columns>IsPercent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TaxRegion__c</field>
        <operation>equals</operation>
        <value>Crossborder</value>
    </filters>
    <label>All Cross</label>
</ListView>