force-app/main/default/objects/Taxes__c/listViews/CEO_Taxes.listView-meta.xml
<ListView>
    <fullName>CEO_Taxes</fullName>
    <filterScope>Queue</filterScope>
    <label>CEO</label>
    <queue>CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>