force-app/main/default/objects/Taxes__c/listViews/Director_Taxes.listView-meta.xml
<ListView>
    <fullName>Director_Taxes</fullName>
    <filterScope>Queue</filterScope>
    <label>Director</label>
    <queue>Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>