force-app/main/default/objects/Taxes__c/listViews/Legal_Compliance_Taxes.listView-meta.xml
<ListView>
    <fullName>Legal_Compliance_Taxes</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal &amp; Compliance</label>
    <queue>Legal_Compliance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>