force-app/main/default/objects/Taxes__c/listViews/TaxaAntecipacao.listView-meta.xml
<ListView>
    <fullName>TaxaAntecipacao</fullName>
    <columns>NAME</columns>
    <columns>RecordTypeName__c</columns>
    <columns>PercentValue__c</columns>
    <columns>TaxaBaseAntecipacao__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordTypeName__c</field>
        <operation>equals</operation>
        <value>TaxaAntecipacao</value>
    </filters>
    <label>Taxa Antecipação</label>
</ListView>